Persistance and api implementation
